@@ -9,6 +9,7 @@ import org.springframework.http.MediaType;
 import com.github.tomakehurst.wiremock.WireMockServer;
 import com.github.tomakehurst.wiremock.client.WireMock;
 
+import example.calculator.Double;
 import example.calculator.I32;
 import zserio.runtime.io.ByteArrayBitStreamWriter;
 import zswag.java.rest.api.ZserioCalculatorServiceInterface;
@@ -16,8 +17,7 @@ import zswag.java.rest.api.ZserioCalculatorServiceInterface;
 public class CalculatorMocks {
 
     public void setupMockPowerResponse(WireMockServer mockService, I32 request) throws IOException {
-        example.calculator.Double response = new example.calculator.Double(
-                BigInteger.valueOf(2).pow(request.getValue()).doubleValue());
+        Double response = new Double(BigInteger.valueOf(2).pow(request.getValue()).doubleValue());
         ByteArrayBitStreamWriter writer = new ByteArrayBitStreamWriter();
         response.write(writer, false);
         byte[] byteArray = writer.toByteArray();
